--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,8 @@
 nav{
   background: #2c3e50;
-  padding: 20px 0;
+  padding: 35px 0;
 }
-a{
+a:hover{
   text-decoration: none;
 }
 .nav-lista{
@@ -14,5 +14,40 @@ a{
 }
 .text-nav{
   color: white;
-  font-size: 20px;
+  font-size: 25px;
+  font-weight: 600;
+}
+.text-nav:hover{
+  color: white;
+}
+.text-nav2{
+  color: white;
+  font-size: 15px;
+  font-weight: 600;
+}
+.text-nav2:hover{
+  color: #1abc9c;
+}
+
+/* header */
+.position-cent{
+  text-align: center;
+  background: #1abc9c;
+}
+.avatar{
+  max-width: 250px;
+  margin-top: 10px;
+}
+h1{
+  color: white;
+  font-size: 60px;
+  font-weight: 600;
+  margin: 25px 0;
+}
+
+.par-header{
+  color: white;
+  font-size: 25px;
+  font-weight: 600;
+  margin: 25px 0 90px;
 }
